Fix horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   font-family: "Montserrat", sans-serif;
 }
 body {
+  overflow-x: hidden;
   margin: 0;
 }
 .gjs-heading {
